--- a/templates/products.html
+++ b/templates/products.html
@@ -11,7 +11,7 @@
 <body>
     <section class="section">
         <div class="container">
-            <h1 class="title">{{supplier_name}}</h1>
+            <h1 class="title">{{name}}</h1>
 
             <table class="table">
                 <thead>
